fix spacing on navbar on mobile sizes

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2709,7 +2709,8 @@ input, select, textarea {
 		text-align: center;
 		top: 0;
 		width: 23em;
-		right: 0;
+    right: 0;
+    margin: 0;
 	}
 
 		#header h1, #header h2, #header h3, #header h4, #header h5, #header h6 {
